--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "formidable file upload practice",
   "main": "app.js",
   "dependencies": {
+    "@types/express": "^4.17.11",
     "express": "^4.17.1",
-    "formidable": "^1.2.1",
-    "nodemon": "^1.19.3"
+    "formidable": "^1.2.2",
+    "nodemon": "^1.19.4",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon app.js"
