--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon app.js"
+    "build": "tsc",
+    "dev": "nodemon ./src/app.ts"
   },
   "author": "memphis",
   "license": "ISC"
