--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "@types/express": "^4.17.11",
+    "@types/formidable": "^1.0.32",
     "express": "^4.17.1",
     "formidable": "^1.2.2",
     "nodemon": "^1.19.4",
